Fixing the file changes

--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -8,5 +8,19 @@
 <body>
     <h1>Chicken</h1>
     <img src="https://www.allrecipes.com/thmb/FeNEIE97E0vPH2RwMnGv0vDhJ7I=/364x242/filters:no_upscale():max_bytes(150000):strip_icc():focal(999x0:1001x2):format(webp)/2630776-asian-lettuce-wraps-Chefd-1x1-1-b10d1fecc65748a4b4c60113da62a863.jpg">
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ducimus iure in error cum, repellendus
+        delectus impedit doloremque quisquam et est temporibus! Facilis, officia inventore. Nulla unde eius minima non?</p>
+   <ul>
+       <li>Egg</li>
+       <li>Water</li>
+       <li>Milk</li>
+   </ul>
+   <ol>
+       <li>Add </li>
+       <li>Cook</li>
+       <li>Serve</li>
+   </ol>
+   
 </body>
 </html>
